<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onAddClick"
        android:text="@string/text_btAdd" />

    <Button
        android:id="@+id/btReplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onReplaceClick"
        android:text="@string/text_btReplace" />

    <Button
        android:id="@+id/btAttach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onAttachClick"
        android:text="@string/text_btAttach" />

    <Button
        android:id="@+id/btDetach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onDetachClick"
        android:text="@string/text_btDetach" />

    <Button
        android:id="@+id/btRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onRemoveClick"
        android:text="@string/text_btRemove" />

    <Button
        android:id="@+id/btFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onFinishClick"
        android:text="@string/text_btFinish" />

    <fragment
        android:id="@+id/staticFragment"
        class="idv.david.fragmentex.StaticFragment"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp" />

</LinearLayout>
